# pr-review

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/scheduler/: Dockerfile  Dockerfile.dev  pyproject.toml
apps/scheduler/src/pr_review_scheduler/: __init__.py  config.py  main.py  scheduler.py  sync.py
apps/scheduler/src/pr_review_scheduler/jobs/: __init__.py  pr_notification.py
apps/scheduler/src/pr_review_scheduler/services/: __init__.py  database.py  email.py  github.py
apps/scheduler/tests/: __init__.py  conftest.py  test_config.py  test_scheduler.py  test_sync.py
apps/scheduler/tests/test_jobs/: __init__.py  test_pr_notification.py
apps/scheduler/tests/test_services/: __init__.py  test_database.py  test_email.py  test_github.py
apps/web-be/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
apps/web-be/alembic/: env.py
apps/web-be/alembic/versions/: 20251224_115605_create_users_table.py  20260115_094105_create_schedules_tables.py
apps/web-be/src/pr_review_api/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/web-be/src/pr_review_api/models/: __init__.py  pull_request.py  schedule.py  user.py
apps/web-be/src/pr_review_api/routers/: __init__.py  auth.py  organizations.py  pulls.py  repositories.py  schedules.py  settings.py
apps/web-be/src/pr_review_api/schemas/: __init__.py  auth.py  organization.py  pull_request.py  rate_limit.py  repository.py  schedule.py  settings.py
apps/web-be/src/pr_review_api/services/: __init__.py  github.py  jwt.py
apps/web-be/tests/: __init__.py  conftest.py  test_auth.py  test_models.py  test_organizations.py  test_pulls.py  test_repositories.py  test_schedules.py  test_settings.py
apps/web-be/tests/test_services/: test_github.py  test_jwt.py
apps/web-fe/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web-fe/src/: App.test.tsx  App.tsx  main.tsx
apps/web-fe/src/components/: Navbar.test.tsx  Navbar.tsx  OrgSelector.test.tsx  OrgSelector.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  PullRequestCard.test.tsx  PullRequestCard.tsx  RepoList.test.tsx  RepoList.tsx  ScheduleForm.test.tsx  ScheduleForm.tsx  ScheduleList.test.tsx  ScheduleList.tsx
apps/web-fe/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
apps/web-fe/src/hooks/: useAuth.test.tsx  useAuth.ts  useOrganizations.test.tsx  useOrganizations.ts  usePullRequests.test.tsx  usePullRequests.ts  useRefresh.test.tsx  useRefresh.ts  useRepositories.test.tsx  useRepositories.ts  useSchedules.test.tsx  useSchedules.ts  useSettings.test.tsx  useSettings.ts
apps/web-fe/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Login.test.tsx  Login.tsx  Settings.test.tsx  Settings.tsx
apps/web-fe/src/services/: api.ts
docs/: PROJECT-TASKS.md  SPECIFICATION.md
docs/plans/: 2026-01-22-phase6-scheduler-service.md  phase-3.2-plan.md  phase-4.2-plan.md  phase-4.5-plan.md  phase-4.6-plan.md  phase-4.7-plan.md  phase-4.8-plan.md
shared/python/pr_review_shared/: pyproject.toml
shared/python/pr_review_shared/src/pr_review_shared/: __init__.py  encryption.py
shared/python/pr_review_shared/tests/: __init__.py  test_encryption.py
(+4 files in other folders)
